Added first trial of the runs

--- a/experiment_runner.ipynb
+++ b/experiment_runner.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-21T16:16:31.166282900Z",
+     "start_time": "2024-01-21T16:16:29.337492300Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# import the required modules\n",
@@ -11,6 +16,7 @@
     "import commons.parse\n",
     "import commons.scores\n",
     "import warnings\n",
+    "import pickle\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
@@ -36,38 +42,140 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-21T16:16:36.190004100Z",
+     "start_time": "2024-01-21T16:16:36.181007Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "\n",
     "#initialize a GraphMaker to choose a stopword list and a stemmer\n",
-    "gm = commons.graph.GraphMaker('resources/longStopwords.txt',\"LAN\")\n"
+    "gm = commons.graph.GraphMaker('resources/longStopwords.txt','LAN')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# sample and initialize as many articles as desired \n",
-    "parsed_articles = commons.parse.parse_and_sample(5,gm)\n"
+    "parsed_articles = commons.parse.parse_and_sample(5000, gm)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-21T15:06:09.625136100Z",
+     "start_time": "2024-01-21T15:06:09.618775Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1 µs, sys: 1e+03 ns, total: 2 µs\n",
+      "Wall time: 4.29 µs\n"
+     ]
+    }
+   ],
    "source": [
     "# compute all centralities and print the results of your run\n",
-    "\n",
-    "run_name = 'testRun'\n",
-    "\n",
+    "run_name = 'testRun'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2min 58s, sys: 6.61 s, total: 3min 5s\n",
+      "Wall time: 4min 32s\n"
+     ]
+    }
+   ],
+   "source": [
     "# Names for centralities : \"PR\"-> pagerank, \"CC\" -> closeness, \"BC\" -> betweenness, \"LCC\" -> local clustering coefficient\n",
     "#boolean approximation: 0-> no approx, 1-> yes, approx\n",
-    "commons.scores.centrality_print_scores(parsed_articles, 'BC', 0, run_name)\n"
-   ]
+    "commons.scores.centrality_print_scores(parsed_articles, 'BC', 0, run_name)\n",
+    "commons.scores.centrality_print_scores(parsed_articles, 'BC', 1, run_name)"
+   ],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-21T14:50:03.553030500Z",
+     "start_time": "2024-01-21T14:45:31.365318600Z"
+    }
+   },
+   "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4994/4994 [03:15<00:00, 25.52it/s]\n",
+      "100%|██████████| 4994/4994 [03:21<00:00, 24.79it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "commons.scores.centrality_print_scores(parsed_articles, 'PR', 0, run_name)\n",
+    "commons.scores.centrality_print_scores(parsed_articles, 'PR', 1, run_name)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-21T15:22:49.007696900Z",
+     "start_time": "2024-01-21T15:12:49.827429Z"
+    }
+   },
+   "execution_count": 6
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4994/4994 [03:28<00:00, 23.93it/s]\n",
+      "100%|██████████| 4994/4994 [04:14<00:00, 19.64it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "commons.scores.centrality_print_scores(parsed_articles, 'LCC', 0, run_name)\n",
+    "commons.scores.centrality_print_scores(parsed_articles, 'LCC', 1, run_name)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-21T15:39:32.078401200Z",
+     "start_time": "2024-01-21T15:24:00.376988600Z"
+    }
+   },
+   "execution_count": 7
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "commons.scores.centrality_print_scores(parsed_articles, 'CC', 0, run_name)\n",
+    "commons.scores.centrality_print_scores(parsed_articles, 'CC', 1, run_name)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -81,9 +189,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "name": "lfn",
    "language": "python",
-   "name": "python3"
+   "display_name": "lfn"
   },
   "language_info": {
    "codemirror_mode": {
