--- a/experiment_runner.ipynb
+++ b/experiment_runner.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Required libraries"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -11,33 +20,45 @@
    },
    "outputs": [],
    "source": [
-    "# import the required modules\n",
     "import commons.graph\n",
     "import commons.parse\n",
-    "import commons.scores\n",
-    "import warnings\n",
-    "#import pickle\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "import commons.scores"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "40091it [21:39, 30.86it/s]                           \n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "#create list of allowed and forbidden files\n",
-    "commons.parse.update_allowed_forbidden_files()"
+    "## Preliminary steps\n",
+    "#### Create a GraphMaker\n",
+    "Specify the stopword list and the desired stemmer:\n",
+    "- ```POR```: Porter Stemmer\n",
+    "- ```SNO```: Snowball Stemmer (English)\n",
+    "- ```LAN```: Lancaster Stemmer"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gm = commons.graph.GraphMaker('resources/longStopwords.txt', 'LAN')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Create (or update) the list of allowed articles\n",
+    "Set the minimum number of nodes for a graph to be considered and run the function.\n",
+    "For the current dataset the file is already made for you, **no need to run it again**.\n",
+    "This function is meant to be executed only the first time or if the dataset changes, e.g. some articles are added or removed."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -50,9 +71,19 @@
    },
    "outputs": [],
    "source": [
-    "#initialize a GraphMaker to choose a stopword list and a stemmer\n",
-    "gm = commons.graph.GraphMaker('resources/longStopwords.txt','LAN')"
+    "min_nodes = 5\n",
+    "commons.parse.update_allowed_forbidden_files(gm, min_nodes)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Sample the articles\n",
+    "There are 35403 allowed articles to sample."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -60,110 +91,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sample and initialize as many articles as desired \n",
     "parsed_articles = commons.parse.parse_and_sample(5000, gm)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
+   "source": [
+    "#### Set the run name\n",
+    "You will find the results in ```experiments/run_name/```."
+   ],
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-21T15:06:09.625136100Z",
-     "start_time": "2024-01-21T15:06:09.618775Z"
-    },
     "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1 µs, sys: 1e+03 ns, total: 2 µs\n",
-      "Wall time: 4.29 µs\n"
-     ]
-    }
-   ],
-   "source": [
-    "# compute all centralities and print the results of your run\n",
-    "run_name = 'testRun'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-21T14:50:03.553030500Z",
-     "start_time": "2024-01-21T14:45:31.365318600Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 2min 58s, sys: 6.61 s, total: 3min 5s\n",
-      "Wall time: 4min 32s\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Names for centralities : \"PR\"-> pagerank, \"CC\" -> closeness, \"BC\" -> betweenness, \"LCC\" -> local clustering coefficient\n",
-    "#boolean approximation: 0-> no approx, 1-> yes, approx\n",
-    "commons.scores.centrality_print_scores(parsed_articles, 'BC', 0, run_name)\n",
-    "commons.scores.centrality_print_scores(parsed_articles, 'BC', 1, run_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-21T15:22:49.007696900Z",
-     "start_time": "2024-01-21T15:12:49.827429Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4994/4994 [03:15<00:00, 25.52it/s]\n",
-      "100%|██████████| 4994/4994 [03:21<00:00, 24.79it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "commons.scores.centrality_print_scores(parsed_articles, 'PR', 0, run_name)\n",
-    "commons.scores.centrality_print_scores(parsed_articles, 'PR', 1, run_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-21T15:39:32.078401200Z",
-     "start_time": "2024-01-21T15:24:00.376988600Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4994/4994 [03:28<00:00, 23.93it/s]\n",
-      "100%|██████████| 4994/4994 [04:14<00:00, 19.64it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "commons.scores.centrality_print_scores(parsed_articles, 'LCC', 0, run_name)\n",
-    "commons.scores.centrality_print_scores(parsed_articles, 'LCC', 1, run_name)"
-   ]
+   }
   },
   {
    "cell_type": "code",
@@ -173,9 +112,122 @@
    },
    "outputs": [],
    "source": [
-    "commons.scores.centrality_print_scores(parsed_articles, 'CC', 0, run_name)\n",
-    "commons.scores.centrality_print_scores(parsed_articles, 'CC', 1, run_name)"
+    "run_name = 'myRun'"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Compute the centralities!\n",
+    "The names for the centralities are:\n",
+    "- ```PR```: PageRank centrality\n",
+    "- ```CC```: Closeness Centrality\n",
+    "- ```BC```: Betwenness centrality\n",
+    "- ```LCC```: Local Clustering Coefficient\n",
+    "\n",
+    "For the approximation there is an integer flag:\n",
+    "- ```0```: exact centrality\n",
+    "- ```1```: approximated centrality"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "commons.scores.centrality_print_scores(parsed_articles, 'BC', 0, run_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "commons.scores.centrality_print_scores(parsed_articles, 'BC', 1, run_name)"
+   ],
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "commons.scores.centrality_print_scores(parsed_articles, 'PR', 0, run_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "commons.scores.centrality_print_scores(parsed_articles, 'PR', 1, run_name)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "commons.scores.centrality_print_scores(parsed_articles, 'LCC', 0, run_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "commons.scores.centrality_print_scores(parsed_articles, 'LCC', 1, run_name)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "commons.scores.centrality_print_scores(parsed_articles, 'CC', 0, run_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "commons.scores.centrality_print_scores(parsed_articles, 'CC', 1, run_name)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "execution_count": 0
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Look at the results!\n",
+    "TODO - non so se il codice sia a posto così ?"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -243,8 +295,7 @@
       " (7 - 3)      0.253     0.000     0.248     0.258\n",
       " (7 - 4)      0.290     0.000     0.285     0.295\n",
       " (7 - 5)      0.274     0.000     0.269     0.279\n",
-      " (7 - 6)     -0.074     0.000    -0.079    -0.069\n",
-      "\n"
+      " (7 - 6)     -0.074     0.000    -0.079    -0.069\n"
      ]
     },
     {
@@ -318,16 +369,16 @@
    ],
    "source": [
     "#compute average scores, variances etc...\n",
-    "commons.scores.significant_differences(['PR','CC','BC','LCC'],2,'R@20','half_articles')\n",
-    "display(commons.scores.average_metric('P@20', 'half_articles'))\n"
+    "commons.scores.significant_differences(['PR','CC','BC','LCC'], 2, 'R@20', 'half_articles')\n",
+    "display(commons.scores.average_metric('P@20', 'half_articles'))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "name": "lfn",
    "language": "python",
-   "name": "python3"
+   "display_name": "lfn"
   },
   "language_info": {
    "codemirror_mode": {
