--- a/experiment_runner.ipynb
+++ b/experiment_runner.ipynb
@@ -11,15 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-24T00:00:01.278911700Z",
+     "start_time": "2024-01-24T00:00:01.274149600Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import commons.graph\n",
     "import commons.parse\n",
     "import commons.scores\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -38,8 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-24T00:00:05.068394500Z",
+     "start_time": "2024-01-24T00:00:04.556726600Z"
+    }
+   },
    "outputs": [],
    "source": [
     "gm = commons.graph.GraphMaker('resources/longStopwords.txt', 'LAN')"
@@ -99,13 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-24T00:00:09.166646900Z",
+     "start_time": "2024-01-24T00:00:09.163294900Z"
+    }
    },
    "outputs": [],
    "source": [
-    "run_name = 'myRun'"
+    "run_name = 'testRun-40000'"
    ]
   },
   {
