Small fix of the README, added markdown section to notebook

--- a/experiment_runner.ipynb
+++ b/experiment_runner.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "### Required libraries"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Required libraries"
+   ]
   },
   {
    "cell_type": "code",
@@ -29,6 +29,9 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Preliminary steps\n",
     "#### Create a GraphMaker\n",
@@ -36,10 +39,7 @@
     "- ```POR```: Porter Stemmer\n",
     "- ```SNO```: Snowball Stemmer (English)\n",
     "- ```LAN```: Lancaster Stemmer"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -57,15 +57,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "#### Create (or update) the list of allowed articles\n",
     "Set the minimum number of nodes for a graph to be considered and run the function.\n",
     "For the current dataset the file is already made for you, **no need to run it again**.\n",
     "This function is meant to be executed only the first time or if the dataset changes, e.g. some articles are added or removed."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -79,13 +79,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### Sample the articles\n",
     "There are 35403 allowed articles available for sampling."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -99,23 +99,23 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "#### Set the run name\n",
     "You will find the results in ```experiments/run_name/```."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-24T00:00:09.166646900Z",
      "start_time": "2024-01-24T00:00:09.163294900Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -124,6 +124,9 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Compute the centralities!\n",
     "The names for the centralities are:\n",
@@ -135,10 +138,7 @@
     "For the approximation there is an integer flag:\n",
     "- ```0```: exact centrality\n",
     "- ```1```: approximated centrality"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -153,12 +153,12 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "commons.scores.centrality_print_scores(parsed_articles, 'BC', 1, run_name)"
-   ],
-   "metadata": {},
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
@@ -173,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "commons.scores.centrality_print_scores(parsed_articles, 'PR', 1, run_name)"
-   ],
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "execution_count": null
+   "outputs": [],
+   "source": [
+    "commons.scores.centrality_print_scores(parsed_articles, 'PR', 1, run_name)"
+   ]
   },
   {
    "cell_type": "code",
@@ -195,14 +195,14 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "commons.scores.centrality_print_scores(parsed_articles, 'LCC', 1, run_name)"
-   ],
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "execution_count": null
+   "outputs": [],
+   "source": [
+    "commons.scores.centrality_print_scores(parsed_articles, 'LCC', 1, run_name)"
+   ]
   },
   {
    "cell_type": "code",
@@ -217,24 +217,44 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "commons.scores.centrality_print_scores(parsed_articles, 'CC', 1, run_name)"
-   ],
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "execution_count": null
+   "outputs": [],
+   "source": [
+    "commons.scores.centrality_print_scores(parsed_articles, 'CC', 1, run_name)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Look at the results!\n",
-    "TODO - non so se il codice sia a posto così ?"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## Look at the Results!\n",
+    "The names for the centralities are:\n",
+    "- ```PR```: PageRank centrality\n",
+    "- ```CC```: Closeness Centrality\n",
+    "- ```BC```: Betwenness centrality\n",
+    "- ```LCC```: Local Clustering Coefficient\n",
+    "\n",
+    "For the approximation there is an integer value:\n",
+    "- ```0```: exact centrality\n",
+    "- ```1```: approximated centrality\n",
+    "- ```2```: consider both the exact and the approximated centralities for comparison.\n",
+    "\n",
+    "The available metrics for visualization are:\n",
+    "- ```P@5```, ```P@10``` , ```P@15```, ```P@20```: Precision at 5, 10, 15, 20\n",
+    "- ```R@5```, ```R@10``` , ```R@15```, ```R@20```: Recall at 5, 10, 15, 20\n",
+    "- ```P@tot```: the number of keywords divided by the number of nodes of the co-occurrence graph\n",
+    "- ```R@tot```: the number of keywords effectively present in the abstract (hence, actually retrievable)\n",
+    "\n",
+    "Function ```significant_differences``` prints a boxplot of the selected metric for the centrality of choice and a table presenting the results of Tukey HSD multiple comparison test. This will help in assessing whether there is an actual difference in performance between the selected centralities. The confidence interval is set at 95% by default.\n",
+    "\n",
+    "Function ```average_metric``` outputs a simple DataFrame with the average performace (under a metric of choice) for all centralities. This is meant as an aid to better interpret the boxplots. \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -242,17 +262,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#compute average scores, variances etc...\n",
-    "commons.scores.significant_differences(['PR','CC','BC','LCC'], 2, 'R@20', 'half_articles')\n",
-    "display(commons.scores.average_metric('P@20', 'half_articles'))"
+    "\n",
+    "commons.scores.significant_differences(['PR','CC','BC','LCC'], 2, 'R@20', run_name)\n",
+    "display(commons.scores.average_metric('R@20', run_name))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "lfn",
+   "display_name": "Python 3",
    "language": "python",
-   "display_name": "lfn"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
