--- a/experiment_runner.ipynb
+++ b/experiment_runner.ipynb
@@ -11,13 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-24T00:00:01.278911700Z",
-     "start_time": "2024-01-24T00:00:01.274149600Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import commons.graph\n",
@@ -43,13 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-24T00:00:05.068394500Z",
-     "start_time": "2024-01-24T00:00:04.556726600Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "gm = commons.graph.GraphMaker('resources/longStopwords.txt', 'LAN')"
@@ -104,22 +94,18 @@
    },
    "source": [
     "#### Set the run name\n",
-    "You will find the results in ```experiments/run_name/```."
+    "You will find the results in ```experiments/[run_name]/```."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-24T00:00:09.166646900Z",
-     "start_time": "2024-01-24T00:00:09.163294900Z"
-    },
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "run_name = 'testRun-40000'"
+    "run_name = 'myRun'"
    ]
   },
   {
@@ -250,9 +236,9 @@
     "- ```P@tot```: the number of keywords divided by the number of nodes of the co-occurrence graph\n",
     "- ```R@tot```: the number of keywords effectively present in the abstract (hence, actually retrievable)\n",
     "\n",
-    "Function ```significant_differences``` prints a boxplot of the selected metric for the centrality of choice and a table presenting the results of Tukey HSD multiple comparison test. This will help in assessing whether there is an actual difference in performance between the selected centralities. The confidence interval is set at 95% by default.\n",
+    "The function ```significant_differences``` prints a boxplot of the selected metric for the centrality of choice and a table presenting the results of Tukey HSD multiple comparison test. This will help in assessing whether there is an actual difference in performance between the selected centralities. The confidence interval is set at 95% by default.\n",
     "\n",
-    "Function ```average_metric``` outputs a simple DataFrame with the average performace (under a metric of choice) for all centralities. This is meant as an aid to better interpret the boxplots. \n",
+    "The function ```average_metric``` outputs a simple DataFrame with the average performance (under a metric of choice) for all centralities. This is meant as an aid to better interpret the boxplots. \n",
     "\n"
    ]
   },
@@ -270,9 +256,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "lfn",
    "language": "python",
-   "name": "python3"
+   "display_name": "lfn"
   },
   "language_info": {
    "codemirror_mode": {
